fix: Xterm component copy to clipboard tooltip caused a scrollbar

--- a/packages/uhk-web/src/app/components/xterm/xterm.component.scss
+++ b/packages/uhk-web/src/app/components/xterm/xterm.component.scss
@@ -31,6 +31,9 @@ $scrollbar-radius: 6px;
     position: absolute;
     top: 2px;
     right: 14px;
+    width: 30px;
+    height: 32px;
+    text-align: center;
 }
 
 .xterm-standard {
